--- a/style.css
+++ b/style.css
@@ -8,6 +8,32 @@ body {
     background-color: #ffffff;
 }
 
+nav {
+    min-width: 406px;
+    background-color: #158CC0;
+    height: 35px;
+    width: 100%;
+    padding-top: 15px;
+    color: #ffffff;
+}
+
+nav a {
+    color: #ffffff;
+    padding: 15px;
+    text-decoration: none;
+}
+
+#left {
+    padding-left: 20px;
+    font-size: 1em;
+    letter-spacing: 2px;
+}
+
+#right {
+    float: right;
+    padding-right: 20px;
+}
+
 h2 {
     color: #158CC0;
     text-align: center;
@@ -118,20 +144,6 @@ video {
     width: 90%
 }
 
-#topdiv {
-    min-width: 406px;
-    background-color: #158CC0;
-    height: 35px;
-    width: 100%;
-    padding-top: 10px;
-    color: #ffffff;
-}
-
-#topdiv a {
-    color: #ffffff;
-    padding: 5px;
-    text-decoration: none;
-}
 
 /* Make top nav fixed. 
 	I adjust margin on #heading-text since setting .topdiv to fixed, effects the flow of the page.*/
@@ -201,7 +213,6 @@ video {
     grid-column: 1;
     background-color: lightblue;
   }
-
 
 .img-container {
     grid-column: 2;
