--- a/style.css
+++ b/style.css
@@ -106,8 +106,8 @@ header h2 {
     text-shadow: 2px 2px #000000;
 }
 
-/* Section */
-#bottomcontainer {
+/* Info Section */
+#info-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -115,144 +115,130 @@ header h2 {
     margin-left: auto;
     margin-right: auto;
     margin-top: 50px;
-  }
+}
 
-  #leftside, #rightside {
-    width: 48%; /* Adjust as needed */
+#leftside,
+#rightside {
+    width: 48%;
+    /* Adjust as needed */
     margin-bottom: 20px;
     padding: 10px;
     box-sizing: border-box;
-  }
+}
 
-  #leftside h2 {
+#leftside h2 {
     color: #158CC0;
     font-size: 2em;
-  }
+}
 
-  p {
+p {
     margin: 10px;
-  }
+}
 
-  #rightside h2 {
+#rightside h2 {
     color: #158CC0;
     font-size: 2em;
-  }
+}
 
-  ol li {
+ol li {
     list-style-type: decimal;
     list-style-position: inside;
     margin-bottom: 5px;
     margin-top: 9px;
     padding-left: 25px;
-  }
+}
 
-  .bold {
+.bold {
     font-weight: bold;
-  }
+}
 
-  @media (max-width: 768px) {
-    #leftside, #rightside {
-      width: 90%;
-    }
+@media (max-width: 768px) {
 
-
-
-
-
-/*
-@media screen and (max-width: 712px) {
-
-    #leftside {
-        width: 95%;
-        padding: 10px;
-        float: left;
-    }
-
+    #leftside,
     #rightside {
-        width: 95%;
-        padding: 10px;
+        width: 90%;
+    }
+
+/* Staff Section */
+
+
+
+
+   
+
+
+
+
+
+
+    #pagefooter {
+
+        width: 100%;
+        height: 40px;
+        margin-left: auto;
+        margin-right: auto;
+        clear: both;
+        background-color: #158CC0;
+        text-align: center;
+        color: #ffffff;
+        padding-top: 15px;
+    }
+
+    #video {
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        clear: both;
+        text-align: center;
+        margin-bottom: 15vh;
+    }
+
+    video {
+        width: 90%
+    }
+
+
+
+    /**/
+
+    .container {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        gap: 20px;
+        border: 2px dotted rgb(217, 237, 249);
+        background-color: rgba(217, 237, 249, .4);
+        margin: 50px auto 50px auto;
+        padding: 1em;
         clear: both;
     }
+
+    .txt-container {
+        grid-column: 1;
+        background-color: lightblue;
+    }
+
+    .img-container {
+        grid-column: 2;
+    }
+
+    .img-container img {
+        max-width: 100%;
+        /* Set the maximum width to 100% */
+        height: auto;
+        /* Allow the height to adjust proportionally */
+        display: block;
+        /* Ensure the image is displayed as a block element */
+        margin: 2.5em auto;
+        /* Center the image horizontally */
+        border-radius: 10%;
+        width: 80%;
+    }
+
+
+    #above-video li {
+        list-style-type: square;
+        margin-bottom: 5px;
+        padding-left: 10px;
+        margin-left: 35px;
+    }
 }
-
-#bottomcontainer {
-
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 50px;
-}
-*/
-
-
-
-
-
-
-
-#pagefooter {
-
-    width: 100%;
-    height: 40px;
-    margin-left: auto;
-    margin-right: auto;
-    clear: both;
-    background-color: #158CC0;
-    text-align: center;
-    color: #ffffff;
-    padding-top: 15px;
-}
-
-#video {
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    clear: both;
-    text-align: center;
-    margin-bottom: 15vh;
-}
-
-video {
-    width: 90%
-}
-
-
-
-/**/
-
-.container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 20px;
-    border: 2px dotted rgb(217, 237, 249);
-    background-color: rgba(217, 237, 249, .4);
-    margin: 50px auto 50px auto;
-    padding: 1em;
-    clear: both;
-  }
-
-  .txt-container {
-    grid-column: 1;
-    background-color: lightblue;
-  }
-
-.img-container {
-    grid-column: 2;
-}
-
-.img-container img {
-    max-width: 100%; /* Set the maximum width to 100% */
-    height: auto; /* Allow the height to adjust proportionally */
-    display: block; /* Ensure the image is displayed as a block element */
-    margin: 2.5em auto; /* Center the image horizontally */
-    border-radius: 10%;
-    width: 80%;
-}
-
-
-#above-video li {
-    list-style-type: square;
-    margin-bottom: 5px;
-    padding-left: 10px;
-    margin-left: 35px;
-}}
