--- a/style.css
+++ b/style.css
@@ -160,25 +160,26 @@ ol li {
     }
 
 /* Staff Section */
-
 #staff-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     width: 80%;
-    margin: 50px auto;
+    margin: 50px auto; /* Center the container */
 }
 
 #text-container {
-    width: 50%;
+    width: 48%;
+    /* Adjust as needed */
     margin-bottom: 20px;
     padding: 10px;
     box-sizing: border-box;
     background-color: lightblue;
 }
 
-.img-container{
+.img-container {
     width: 48%;
+    /* Adjust as needed */
 }
 
 .img-container img {
@@ -191,7 +192,7 @@ ol li {
     border-radius: 10%;
     width: 80%;
 }
-   
+
 @media (max-width: 768px) {
     #staff-container {
         width: 90%;
@@ -204,38 +205,4 @@ ol li {
         /* Make both containers full width on smaller screens */
     }
 }
-
-
-
-/*#pagefooter {
-
-        width: 100%;
-        height: 40px;
-        margin-left: auto;
-        margin-right: auto;
-        clear: both;
-        background-color: #158CC0;
-        text-align: center;
-        color: #ffffff;
-        padding-top: 15px;
-    }
-
-    #video {
-        width: 100%;
-        margin-left: auto;
-        margin-right: auto;
-        clear: both;
-        text-align: center;
-        margin-bottom: 15vh;
-    }
-
-    video {
-        width: 90%
-    }
-
-    #above-video li {
-        list-style-type: square;
-        margin-bottom: 5px;
-        padding-left: 10px;
-        margin-left: 35px;
-    }*/}
+}
