--- a/style.css
+++ b/style.css
@@ -159,49 +159,70 @@ ol li {
         width: 90%;
     }
 
+
+    /* OLD STYLE */
+    #css-table {
+        display: table;
+        border: 1px dotted rgb(217, 237, 249);
+        background-color: rgba(217, 237, 249, .4);
+        width: 80%;
+        margin-top: 50px;
+        margin-bottom: 50px;
+        margin-left: auto;
+        margin-right: auto;
+        clear: both;
+    }
+
 /* Staff Section */
+
 #staff-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     width: 80%;
-    margin: 50px auto; /* Center the container */
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
 }
 
-#text-container {
+#left, #right {
     width: 48%;
     /* Adjust as needed */
     margin-bottom: 20px;
     padding: 10px;
     box-sizing: border-box;
-    background-color: lightblue;
 }
 
-.img-container {
-    width: 48%;
-    /* Adjust as needed */
+#left {
+    float: left;
+    width: 45%;
+    margin-bottom: 20px;
+    padding: 10px;
 }
 
-.img-container img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-    /* Ensure the image is displayed as a block element */
-    margin: 2.5em auto;
-    /* Center the image horizontally */
-    border-radius: 10%;
-    width: 80%;
+#right{
+    float: right;
+    width: 45%;
+    margin-bottom: 20px;
+    padding: 10px;
+}
+
+#left h2 {
+    color: #158CC0;
+    font-size: 2em;
 }
 
 @media (max-width: 768px) {
-    #staff-container {
+    #left {
         width: 90%;
-        /* Adjust container width for smaller screens */
+        padding: 10px;
+        float: left;
     }
 
-    #text-container,
-    .img-container {
-        width: 100%;
+    #right {
+        width: 90%;
+        padding: 10px;
+        clear: both;
         /* Make both containers full width on smaller screens */
     }
 }
