--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 body {
     font-family: 'Open Sans', sans-serif;
     background-color: #ffffff;
+    box-sizing: border-box;
 }
 
 /* Navbar */
@@ -38,11 +39,13 @@ nav a {
     padding-right: 20px;
 }
 
+
 main {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
     margin: 100px auto 50px auto;
+    box-sizing: border-box;
 }
 
 /* Header Section */
@@ -90,7 +93,6 @@ header h2 {
     /*background-attachment: fixed;*/
     background-attachment: scroll;
     background-size: cover;
-    /*border-radius: 25px;*/
 }
 
 #shark-hero-text {
@@ -107,7 +109,7 @@ header h2 {
 }
 
 /* Info Section */
-#info-container {
+.info-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -115,10 +117,11 @@ header h2 {
     margin-left: auto;
     margin-right: auto;
     margin-top: 50px;
+    box-sizing: border-box;
 }
 
-#leftside,
-#rightside {
+.leftside,
+.rightside {
     width: 48%;
     /* Adjust as needed */
     margin-bottom: 20px;
@@ -126,7 +129,7 @@ header h2 {
     box-sizing: border-box;
 }
 
-#leftside h2 {
+.leftside h2 {
     color: #158CC0;
     font-size: 2em;
 }
@@ -135,7 +138,7 @@ p {
     margin: 10px;
 }
 
-#rightside h2 {
+.rightside h2 {
     color: #158CC0;
     font-size: 2em;
 }
@@ -152,30 +155,7 @@ ol li {
     font-weight: bold;
 }
 
-@media (max-width: 768px) {
-
-    #leftside,
-    #rightside {
-        width: 90%;
-    }
-
-
-    /* OLD STYLE */
-    #css-table {
-        display: table;
-        border: 1px dotted rgb(217, 237, 249);
-        background-color: rgba(217, 237, 249, .4);
-        width: 80%;
-        margin-top: 50px;
-        margin-bottom: 50px;
-        margin-left: auto;
-        margin-right: auto;
-        clear: both;
-    }
-
-/* Staff Section */
-
-#staff-container {
+#info-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -183,9 +163,14 @@ ol li {
     margin-left: auto;
     margin-right: auto;
     margin-top: 50px;
+    margin-bottom: 20px;
+    box-sizing: border-box;
+    border: 3px dotted rgb(217, 237, 249);
+    background-color: rgba(217, 237, 249, .5);
 }
 
-#left, #right {
+#leftside, 
+#rightside {
     width: 48%;
     /* Adjust as needed */
     margin-bottom: 20px;
@@ -193,37 +178,68 @@ ol li {
     box-sizing: border-box;
 }
 
-#left {
-    float: left;
-    width: 45%;
-    margin-bottom: 20px;
-    padding: 10px;
-}
-
-#right{
-    float: right;
-    width: 45%;
-    margin-bottom: 20px;
-    padding: 10px;
-}
-
-#left h2 {
+#leftside h2 {
     color: #158CC0;
-    font-size: 2em;
+    font-size: 1.5em;
+}
+
+#rightside {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 60px;
+}
+
+#leftside2, 
+#rightside2 {
+    width: 48%;
+    /* Adjust as needed */
+    margin-bottom: 20px;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+#leftside2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 @media (max-width: 768px) {
-    #left {
-        width: 90%;
-        padding: 10px;
-        float: left;
-    }
 
-    #right {
+    #leftside,
+    #rightside {
         width: 90%;
-        padding: 10px;
-        clear: both;
-        /* Make both containers full width on smaller screens */
     }
 }
+
+/* VIDEO SECTION */
+
+#video {
+    width: 100%;
+    margin-left: auto; 
+    margin-right: auto;
+    clear: both;
+    text-align: center;
+    margin-bottom: 15vh;
+    }
+
+video {width: 90%}
+
+#pagefooter {
+		
+    width: 100%;
+    height: 40px;
+    margin-left: auto; 
+    margin-right: auto;
+    clear: both;
+    background-color: #158CC0;
+    text-align: center;
+    color: #ffffff;
+    padding-top: 15px; 
 }
