--- a/style.css
+++ b/style.css
@@ -222,6 +222,7 @@ img {
 
 #video {
     width: 100%;
+    margin-top: 100px;
     margin-left: auto; 
     margin-right: auto;
     clear: both;
@@ -229,9 +230,9 @@ img {
     margin-bottom: 15vh;
     }
 
-video {width: 90%}
+video {width: 80%}
 
-#pagefooter {
+footer {
 		
     width: 100%;
     height: 40px;
