--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: monospace 'Open Sans', sans-serif;
     background-color: #ffffff;
     box-sizing: border-box;
 }
@@ -132,6 +132,7 @@ header h2 {
 .leftside h2 {
     color: #158CC0;
     font-size: 2em;
+    text-align: center;
 }
 
 p {
@@ -141,6 +142,7 @@ p {
 .rightside h2 {
     color: #158CC0;
     font-size: 2em;
+    text-align: center;
 }
 
 ol li {
@@ -169,7 +171,7 @@ ol li {
     background-color: rgba(217, 237, 249, .5);
 }
 
-#leftside, 
+#leftside,
 #rightside {
     width: 48%;
     /* Adjust as needed */
@@ -181,12 +183,14 @@ ol li {
 #leftside h2 {
     color: #158CC0;
     font-size: 1.5em;
+    text-align: center;
 }
 
 #rightside {
     display: flex;
     justify-content: center;
     align-items: center;
+    border-bottom: 4px solid #158CC0;
 }
 
 img {
@@ -195,7 +199,7 @@ img {
     border-radius: 60px;
 }
 
-#leftside2, 
+#leftside2,
 #rightside2 {
     width: 48%;
     /* Adjust as needed */
@@ -223,24 +227,60 @@ img {
 #video {
     width: 100%;
     margin-top: 100px;
-    margin-left: auto; 
+    margin-left: auto;
     margin-right: auto;
     clear: both;
     text-align: center;
     margin-bottom: 15vh;
-    }
+}
 
-video {width: 80%}
+video {
+    width: 80%
+}
 
 footer {
-		
+
     width: 100%;
     height: 40px;
-    margin-left: auto; 
+    margin-left: auto;
     margin-right: auto;
     clear: both;
     background-color: #158CC0;
     text-align: center;
     color: #ffffff;
-    padding-top: 15px; 
+    padding-top: 15px;
+}
+
+/* For tablets and iPads */
+@media only screen and (min-width: 601px) and (max-width: 1024px) {
+    .info-container {
+        flex-direction: row; /* Two columns by default */
+    }
+
+    .leftside,
+    .rightside {
+        width: 48%;
+    }
+
+    #leftside,
+    #rightside {
+        width: 48%;
+    }
+}
+
+/* For mobile devices */
+@media only screen and (max-width: 600px) {
+    .info-container {
+        flex-direction: column; /* Stack in a single column */
+    }
+
+    .leftside,
+    .rightside {
+        width: 100%;
+    }
+
+    #leftside,
+    #rightside {
+        width: 100%;
+    }
 }
