--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 * {
     margin: 0;
-    padding: 0
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
     font-family: monospace 'Open Sans', sans-serif;
     background-color: #ffffff;
-    box-sizing: border-box;
 }
 
 /* Navbar */
@@ -18,7 +18,7 @@ nav {
     padding-top: 15px;
     color: #ffffff;
     position: fixed;
-    top: 0px;
+    top: 0;
     z-index: 10;
 }
 
@@ -39,13 +39,10 @@ nav a {
     padding-right: 20px;
 }
 
-
+/* Main content */
 main {
     width: 100%;
-    margin-left: auto;
-    margin-right: auto;
     margin: 100px auto 50px auto;
-    box-sizing: border-box;
 }
 
 /* Header Section */
@@ -58,40 +55,15 @@ header h2 {
     font-size: 3em;
 }
 
-@media screen and (max-width: 900px) {
-    h2 {
-        color: #158CC0;
-    }
-}
-
-@media screen and (max-width: 700px) {
-    h2 {
-        color: #8E3131;
-    }
-}
-
-@media screen and (max-width: 500px) {
-    h2 {
-        color: red;
-    }
-}
-
 /* Hero Section */
-/* Set the attachment to 'fixed' for simple parallax scrolling. */
 #hero {
     margin-top: 50px;
-    margin-left: auto;
-    margin-right: auto;
     text-align: center;
     height: 500px;
-    /*height: 80vh;*/
     width: 100%;
-    background: url(shark-attacks.jpg);
+    background-image: url(shark-attacks.jpg);
     background-repeat: no-repeat;
     background-position: bottom bottom;
-    /*background-position: center center;*/
-    /*background-attachment: fixed;*/
-    background-attachment: scroll;
     background-size: cover;
 }
 
@@ -104,85 +76,30 @@ header h2 {
     font-size: 9vw;
     opacity: 0.7;
     letter-spacing: 20px;
-    /*or use 2vw so fonts won't stack. In other words, px forces font stacking.*/
     text-shadow: 2px 2px #000000;
 }
 
 /* Info Section */
-.info-container {
+.info-container, #info-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 50px;
+    margin: 50px auto 20px auto;
     box-sizing: border-box;
 }
 
-.leftside,
-.rightside {
+.leftside, .rightside, #leftside, #rightside, #leftside2, #rightside2 {
     width: 48%;
-    /* Adjust as needed */
     margin-bottom: 20px;
     padding: 10px;
     box-sizing: border-box;
 }
 
-.leftside h2 {
+.leftside h2, .rightside h2, #leftside h2 {
     color: #158CC0;
     font-size: 2em;
-    text-align: center;
-}
-
-p {
-    margin: 10px;
-}
-
-.rightside h2 {
-    color: #158CC0;
-    font-size: 2em;
-    text-align: center;
-}
-
-ol li {
-    list-style-type: decimal;
-    list-style-position: inside;
-    margin-bottom: 5px;
-    margin-top: 9px;
-    padding-left: 25px;
-}
-
-.bold {
-    font-weight: bold;
-}
-
-#info-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 50px;
-    margin-bottom: 20px;
-    box-sizing: border-box;
-    border: 3px dotted rgb(217, 237, 249);
-    background-color: rgba(217, 237, 249, .5);
-}
-
-#leftside,
-#rightside {
-    width: 48%;
-    /* Adjust as needed */
-    margin-bottom: 20px;
-    padding: 10px;
-    box-sizing: border-box;
-}
-
-#leftside h2 {
-    color: #158CC0;
-    font-size: 1.5em;
+    margin-bottom: 15px;
     text-align: center;
 }
 
@@ -199,51 +116,29 @@ img {
     border-radius: 60px;
 }
 
-#leftside2,
-#rightside2 {
-    width: 48%;
-    /* Adjust as needed */
-    margin-bottom: 20px;
-    padding: 10px;
-    box-sizing: border-box;
-}
-
 #leftside2 {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-@media (max-width: 768px) {
-
-    #leftside,
-    #rightside {
-        width: 90%;
-    }
-}
-
-/* VIDEO SECTION */
-
+/* Video Section */
 #video {
     width: 100%;
     margin-top: 100px;
-    margin-left: auto;
-    margin-right: auto;
-    clear: both;
     text-align: center;
     margin-bottom: 15vh;
 }
 
 video {
-    width: 80%
+    width: 80%;
 }
 
+/* Footer */
 footer {
-
     width: 100%;
     height: 40px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
     clear: both;
     background-color: #158CC0;
     text-align: center;
@@ -251,36 +146,23 @@ footer {
     padding-top: 15px;
 }
 
-/* For tablets and iPads */
+/* Media Queries */
 @media only screen and (min-width: 601px) and (max-width: 1024px) {
-    .info-container {
-        flex-direction: row; /* Two columns by default */
+    .info-container, #info-container {
+        flex-direction: row;
     }
 
-    .leftside,
-    .rightside {
-        width: 48%;
-    }
-
-    #leftside,
-    #rightside {
+    .leftside, .rightside, #leftside, #rightside {
         width: 48%;
     }
 }
 
-/* For mobile devices */
 @media only screen and (max-width: 600px) {
-    .info-container {
-        flex-direction: column; /* Stack in a single column */
+    .info-container, #info-container {
+        flex-direction: column;
     }
 
-    .leftside,
-    .rightside {
-        width: 100%;
-    }
-
-    #leftside,
-    #rightside {
+    .leftside, .rightside, #leftside, #rightside, #leftside2, #rightside2 {
         width: 100%;
     }
 }
