made the li's bold, highlighted staff names and updated the readme image

--- a/style.css
+++ b/style.css
@@ -103,6 +103,10 @@ header h2 {
     text-align: center;
 }
 
+.bold {
+    font-weight: bold;
+}
+
 #rightside {
     display: flex;
     justify-content: center;
