added a border bottom to push it down a little

--- a/style.css
+++ b/style.css
@@ -120,6 +120,10 @@ img {
     border-radius: 60px;
 }
 
+img, #reuben {
+    margin-bottom: 20px;
+}
+
 #leftside2 {
     display: flex;
     justify-content: center;
