--- a/style.css
+++ b/style.css
@@ -246,8 +246,8 @@ footer {
     }
 
     #hero {
-        width: 90%;
-        height: 400px;
+        width: 100%;
+        height: auto;
     }
 }
 
